<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Theory">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/relational_algebra1"
        android:textColor="#000000"
        android:textSize="36sp"
  />

    <Button
        android:id="@+id/nextbtn"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:text="@string/next"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/homebtn"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="start"
        android:text="@string/home"
        android:textColor="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:layout_below="@id/title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/baloo_thambi"
                android:padding="10dp"
                android:text="@string/introduction"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="5sp"
                android:padding="10dp"
                android:text="@string/content"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>