<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/relational_algebrahome"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SummaryBtn"
        android:layout_width="148dp"
        android:layout_height="98dp"
        android:layout_marginBottom="32dp"

        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/summarybtn"
        android:drawableTop="@drawable/summary"
        android:fontFamily="@font/capriola"
        android:paddingBottom="4dp"
        android:paddingTop="8dp"
        android:shadowColor="#A8A5A5"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/summary"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/VideosBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/QuizBtn"
        android:layout_width="148dp"
        android:layout_height="98dp"
        android:layout_marginBottom="136dp"

        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/quizbtn"
        android:fontFamily="@font/capriola"
        android:paddingBottom="4dp"
        android:paddingTop="8dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/quiz"
        android:drawableTop="@drawable/quiz"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/TheoryBtn"
        android:layout_width="148dp"
        android:layout_height="98dp"
        android:layout_marginBottom="32dp"

        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:drawableTop="@drawable/book2"
        android:fontFamily="@font/capriola"
        android:paddingBottom="4dp"
        android:paddingTop="8dp"
        android:shadowColor="#A8A5A5"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/theory"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/QuizBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/VideosBtn"
        android:layout_width="148dp"
        android:layout_height="98dp"
        android:layout_marginBottom="136dp"

        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/videosbtn"
        android:fontFamily="@font/capriola"
        android:paddingBottom="4dp"
        android:paddingTop="8dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/videos"
        android:drawableTop="@drawable/video"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>